Standardize and fix text wrapping issues
Fixes #1532

--- a/frontend/src/app/bindings/bindings.less
+++ b/frontend/src/app/bindings/bindings.less
@@ -29,7 +29,7 @@
     word-wrap: break-word;
 
     .break-words {
-        word-break: break-all;
+        word-wrap: break-word;
     }
 
     &::before {
@@ -69,6 +69,6 @@
         margin: 0;
         padding: 0;
         padding-left: @gutter;
-        word-break: break-all;
+        word-wrap: break-word;
     }
 }
