--- a/frontend/src/app/components/admin/audit-pane/audit-pane.less
+++ b/frontend/src/app/components/admin/audit-pane/audit-pane.less
@@ -50,7 +50,7 @@ audit-pane {
         .account-col {
             min-width: 100px;
             max-width: 100px;
-            word-break: break-all;
+            word-wrap: break-word;
         }
 
         .category-col {
@@ -59,13 +59,14 @@ audit-pane {
 
         .event-col {
             min-width: 120px;
-            word-break: break-word;
+            word-wrap: break-word;
         }
 
         .entity-col {
             text-align: left;
             width: 100%;
-            word-break: break-word;
+            max-width: 200px;
+            word-wrap: break-word;
         }
     }
 
