--- a/frontend/src/app/components/overview/install-node-wizard/install-node-wizard.less
+++ b/frontend/src/app/components/overview/install-node-wizard/install-node-wizard.less
@@ -1,6 +1,6 @@
 install-node-wizard {
     .config-box {
-        word-break: break-all;
+        word-wrap: break-word;
     }
 
     .instructions {
